ui-ux: Fix the 'intro' section font on small screens

--- a/css/style.sass
+++ b/css/style.sass
@@ -143,18 +143,26 @@ section
         vertical-align: middle
         text-align: center
         position: relative
+        padding: 0 15px
         .content__pre-title
-            font-size: 1.2rem
+            font-size: .8rem
             text-transform: uppercase
             margin: 0
         .content__title
-            font-size: 6rem
+            font-size: 3.5rem
             margin: 0
         .content__desc
-            font-size: 2.5rem
+            font-size: 1.5rem
             color: #5a5a5a
             margin: 1rem 0
         
+    @media all and (min-width: 576px)
+        .content__pre-title
+            font-size: 1.2rem
+        .content__title
+            font-size: 6rem
+        .content__desc
+            font-size: 2.5rem
 
 /**** About ****/
 .about
